--- a/package.json
+++ b/package.json
@@ -5,20 +5,30 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/react": "^1.0.2",
+    "classnames": "^2.2.6",
     "gatsby": "^2.3.3",
-    "gatsby-image": "^2.0.35",
+    "gatsby-image": "^2.0.38",
+    "gatsby-mdx": "^0.6.2",
     "gatsby-plugin-manifest": "^2.0.25",
     "gatsby-plugin-offline": "^2.0.25",
+    "gatsby-plugin-page-creator": "^2.0.12",
     "gatsby-plugin-react-helmet": "^3.0.11",
-    "gatsby-plugin-sharp": "^2.0.32",
-    "gatsby-source-filesystem": "^2.0.28",
-    "gatsby-transformer-sharp": "^2.1.17",
+    "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sharp": "^2.0.34",
+    "gatsby-source-filesystem": "^2.0.29",
+    "gatsby-transformer-sharp": "^2.1.18",
+    "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-text-loop": "^2.0.1"
   },
   "devDependencies": {
+    "@mdx-js/loader": "^1.0.4",
+    "@mdx-js/mdx": "^1.0.4",
+    "loader-utils": "^1.2.3",
     "prettier": "^1.16.4"
   },
   "keywords": [
